--- a/data/sidebar.yml
+++ b/data/sidebar.yml
@@ -1,14 +1,14 @@
 
 #桌面管理
 - name: 首页
-  icon: fa fa-medkit
+  icon: fa fa-home
   uri: /
   controller: DashboardController
   template: /dashboard.html
 
 #桌面管理
 - name: 桌面管理
-  icon: fa fa-medkit
+  icon: fa fa-desktop
   prefix: /basic
   uri: javascript:;
   menus:
@@ -37,7 +37,7 @@
       template: /medicalrecord/list.html
 
 - name: 业务管理
-  icon: fa fa-object-ungroup
+  icon: fa fa-briefcase
   prefix: /basic
   uri: javascript:;
   menus:
@@ -67,7 +67,7 @@
 
 - name: 运行管理
   prefix: /basic
-  icon: glyphicon glyphicon-credit-card
+  icon: fa fa-dashboard
   uri: javascript:;
   menus:
     - name: 资源列表
@@ -122,7 +122,7 @@
 
 
 - name: 拓扑管理
-  icon: fa fa-object-ungroup
+  icon: fa fa-sitemap
   prefix: /basic
   uri: javascript:;
   menus:
@@ -151,7 +151,7 @@
       template: /personnel/personnel_list.html
 
 - name: 告警中心
-  icon: fa fa-object-ungroup
+  icon: fa fa-exclamation-triangle
   prefix: /basic
   uri: javascript:;
   menus:
@@ -192,7 +192,7 @@
       template: /personnel/personnel_list.html
 
 - name: 资产管理
-  icon: fa fa-object-ungroup
+  icon: fa fa-university
   prefix: /basic
   uri: javascript:;
   menus:
@@ -215,7 +215,7 @@
       template: /personnel/personnel_list.html
 
 - name: 值班管理
-  icon: fa fa-object-ungroup
+  icon: fa fa-users
   prefix: /basic
   uri: javascript:;
   menus:
@@ -262,7 +262,7 @@
       template: /personnel/personnel_list.html
 
 - name: 工单管理
-  icon: fa fa-object-ungroup
+  icon: fa fa-tasks
   prefix: /basic
   uri: javascript:;
   menus:
@@ -297,7 +297,7 @@
       template: /personnel/personnel_list.html
 
 - name: 机房管理
-  icon: fa fa-object-ungroup
+  icon: fa fa-database
   prefix: /basic
   uri: javascript:;
   menus:
@@ -326,7 +326,7 @@
       template: /personnel/personnel_list.html
 
 - name: 系统
-  icon: fa fa-object-ungroup
+  icon: fa fa-cog
   prefix: /basic
   uri: javascript:;
   menus:
