--- a/data/module.yml
+++ b/data/module.yml
@@ -1,109 +1,22 @@
-dashboard: app
+# APP
+dashboard:
+  name: Dashboard
+  bundle: app
+  server:
 
-# Cases
-case: api
-index: api
+# 案例
+case:
+  name: 公告管理
+  bundle: api
+  server:
 
-#检测影像
-analysed: analysed
-film: analysed
+index:
+  name: 首页
+  bundle: api
+  server:
 
-# 结算服务
-payment: balance
-paymentdetail: balance
-paymentlog: balance
-statement: balance
-statementdetail: balance
-paymentpractical: balance
-
-#基础数据
-dealer: basic
-grade: basic
-hospital: basic
-labwork: basic
-labworktype: basic
-labworkdetail: basic
-personnel: basic
-product: basic
-producttype: basic
-role: basic
-setting: basic
-storage: basic
-varietie: basic
-varietietype: basic
-dictionary: basic
-dictionarytype: basic
-userdict: basic
-userdicttype: basic
-businestype: basic
-
-#基础数据
-check: check
-checkdevice: check
-
-#诊疗服务
-curemanager: cure
-medicalrecord: cure
-invaccine: cure
-testsheet: cure
-testsheetdetail: cure
-doctorprescript: cure
-doctorprescriptdetail: cure
-prescripttemplate: cure
-prescripttemplatedetail: cure
-prescripttemplatetype: cure
-
-# 预删除
-prescription: cure
-prescriptiontype: cure
-prescriptiondetail: cure
-
-# 直接连
-beauty: direct
-itback: direct
-itbackdetail: direct
-bespeak: direct
-beautydetail: direct
-fosterage: direct
-fosteragedetail: direct
-fosteragehealth: direct
-inhospital: direct
-inhospitaldetail: direct
-inhospitalhealth: direct
-inhospitalprescription: direct
-inhospitalprescriptiondetail: direct
-
-# 会员管理
-pet: guest
-vip: guest
-vipprepay: guest
-
-# 经营管理
-expenditure: management
-expendituretype: management
-
-msgfind: message
-msgself: message
-msgsetting: message
-msgwarn: message
-wechat: message
-
-register: registration
-
-# 报表
-amchartdashboard: report
-
-# 销售
-saleplate: sales
-saleplatedetail: sales
-
-# 库存
-backstorage: stock
-backstoragedetail: stock
-instorage: stock
-instoragedetail: stock
-movestorage: stock
-movestoragedetail: stock
-outstorage: stock
-outstoragedetail: stock
-stock: stock
+# 文章内容
+notice:
+  name: 公告管理
+  bundle: article
+  server: idcsnotifications
