--- a/data/sidebar.yml
+++ b/data/sidebar.yml
@@ -6,23 +6,33 @@
   controller: DashboardController
   template: /dashboard.html
 
-- name: 首页栏目
-  icon: fa fa-home
-  prefix: /app
-  uri: javascript:;
-  menus:
-    - name: 公告管理
-      icon: fa fa-stethoscope
-      controller: NotificationController
-      uri: /notification
-      template: /notification/notification_list.html
+#- name: 首页栏目
+#  icon: fa fa-home
+#  prefix: /app
+#  uri: javascript:;
+#  menus:
+#    - name: 公告管理
+#      icon: fa fa-stethoscope
+#      controller: NotificationController
+#      uri: /notification
+#      template: /notification/notification_list.html
+#
+#    - name: 待办事项
+#      icon: fa fa-stethoscope
+#      controller: TodoController
+#      uri: /todo
+#      template: /todo/todo_list.html
 
-    - name: 待办事项
-      icon: fa fa-stethoscope
-      controller: TodoController
-      uri: /todo
-      template: /todo/todo_list.html
-
+#- name: Flash
+#  icon: fa fa-home
+#  prefix: /flash
+#  uri: javascript:;
+#  menus:
+#    - name: 嵌入Flash
+#      icon: fa fa-stethoscope
+#      controller: NestingflashController
+#      uri: /nestingflash
+#      template: /nestingflash.html
 
 #桌面管理
 - name: 桌面管理
@@ -32,25 +42,23 @@
   menus:
     - name: 统计视图
       icon: fa fa-stethoscope
-      controller: PersonnelController
-      uri: /views/index.html
-      template: /curemanager/curemanager_list.html
+      ngclick: gotoFlashPage('config', 'config/ConfigModule.swf', 'childmenuid=config_index_menu')
 
     - name: 告警事件
       icon: fa fa-stethoscope
-      controller: PersonnelController
+      controller: NestingflashController
       uri: /iframe
       template: /flash/iframe.html
 
     - name: 维规事件
       icon: fa fa-stethoscope
-      controller: PersonnelController
+      controller: NestingflashController
       uri: /personnel/personnel_list
       template: /prescription/prescription_list.html
 
     - name: 可能违规事件
       icon: fa fa-sticky-note
-      controller: PersonnelController
+      controller: NestingflashController
       uri: /personnel/personnel_list
       template: /medicalrecord/list.html
 
@@ -61,27 +69,19 @@
   menus:
     - name: 业务列表
       icon: fa fa-th-large
-      uri: /personnel/personnel_list
-      template: /personnel/personnel_list.html
-      controller: PersonnelController
+      ngclick: gotoFlashPage('apply', 'apply/ApplyModule.swf', 'childmenuid=apply_app')
 
     - name: 控制台
       icon: fa fa-th-large
-      uri: /personnel/personnel_list
-      controller: PersonnelController
-      template: /personnel/personnel_list.html
+      ngclick: gotoFlashPage('apply', 'apply/ApplyModule.swf', 'childmenuid=business_monitor')
 
     - name: 用户组管理
       icon: fa fa-th-large
-      uri: /personnel/personnel_list
-      controller: PersonnelController
-      template: /personnel/personnel_list.html
+      ngclick: gotoFlashPage('apply', 'apply/ApplyModule.swf', 'childmenuid=apply_dept')
 
-    - name: 业务告警
+    - name: 新建业务
       icon: fa fa-th-large
-      uri: /personnel/personnel_list
-      controller: PersonnelController
-      template: /personnel/personnel_list.html
+      ngclick: gotoFlashPage('apply', 'apply/ApplyModule.swf', 'childmenuid=business_add')
 
 - name: 运行管理
   prefix: /basic
@@ -90,54 +90,31 @@
   menus:
     - name: 资源列表
       icon: fa fa-paw
-      uri: /pet/list
-      controller: PersonnelController
-      template: /pet/pet_list.html
+      ngclick: gotoFlashPage('config', 'config/ConfigModule.swf', 'childmenuid=config_index_menu')
 
     - name: 资源分组
       icon: fa fa-user
-      uri: /vip/list
-      controller: PersonnelController
-      template: /vip/vip_list.html
+      ngclick: gotoFlashPage('config', 'config/ConfigModule.swf', 'childmenuid=config_elementgroup')
 
     - name: 资源类别
       icon: fa fa-user
-      uri: /vip/list
-      controller: PersonnelController
-      template: /vip/vip_list.html
+      ngclick: gotoFlashPage('config', 'config/ConfigModule.swf', 'childmenuid=config_devicetype')
 
     - name: 厂商类别
       icon: fa fa-user
-      uri: /vip/list
-      controller: PersonnelController
-      template: /vip/vip_list.html
-
+      ngclick: gotoFlashPage('config', 'config/ConfigModule.swf', 'childmenuid=config_vendor')
 
     - name: 协议参数
       icon: fa fa-user
-      uri: /vip/list
-      controller: PersonnelController
-      template: /vip/vip_list.html
+      ngclick: gotoFlashPage('config', 'config/ConfigModule.swf', 'childmenuid=config_snmppro')
 
-
-    - name: 模型设置
+    - name: 全局轮询参数
       icon: fa fa-user
-      uri: /vip/list
-      controller: PersonnelController
-      template: /vip/vip_list.html
+      ngclick: gotoFlashPage('config', 'config/ConfigModule.swf', 'childmenuid=config_DefaultNePollingInterval')
 
-    - name: ipmac管理
+    - name: 添加设备
       icon: fa fa-user
-      uri: /vip/list
-      controller: PersonnelController
-      template: /vip/vip_list.html
-
-    - name: 配置管理
-      icon: fa fa-user
-      uri: /vip/list
-      controller: PersonnelController
-      template: /vip/vip_list.html
-
+      ngclick: gotoFlashPage('config', 'config/ConfigModule.swf', 'childmenuid=config_addne')
 
 - name: 拓扑管理
   icon: fa fa-sitemap
@@ -146,27 +123,19 @@
   menus:
     - name: 拓扑视图
       icon: fa fa-th-large
-      uri: /personnel/personnel_list
-      template: /personnel/personnel_list.html
-      controller: PersonnelController
+      ngclick: gotoFlashPage('view', 'view/ViewModule.swf', 'childmenuid=view_readview')
 
     - name: 平面图
       icon: fa fa-th-large
-      uri: /personnel/personnel_list
-      controller: PersonnelController
-      template: /personnel/personnel_list.html
+      ngclick: gotoFlashPage('topo', 'topo/TopoModule.swf', 'childmenuid=topo_flat_view')
 
     - name: 分层图
       icon: fa fa-th-large
-      uri: /personnel/personnel_list
-      controller: PersonnelController
-      template: /personnel/personnel_list.html
+      ngclick: gotoFlashPage('topo', 'topo/TopoModule.swf', 'childmenuid=topo_layer_view')
 
     - name: 拓扑发现
       icon: fa fa-th-large
-      uri: /personnel/personnel_list
-      controller: PersonnelController
-      template: /personnel/personnel_list.html
+      ngclick: gotoFlashPage('topo', 'topo/TopoModule.swf', 'childmenuid=topo_discovery')
 
 - name: 告警中心
   icon: fa fa-exclamation-triangle
@@ -175,39 +144,27 @@
   menus:
     - name: 告警控制台
       icon: fa fa-th-large
-      uri: /personnel/personnel_list
-      template: /personnel/personnel_list.html
-      controller: PersonnelController
+      ngclick: gotoFlashPage('fault', 'fault/FaultModule.swf', 'childmenuid=alarm_alarmrealtimelist')
 
     - name: 实时告警
       icon: fa fa-th-large
-      uri: /personnel/personnel_list
-      controller: PersonnelController
-      template: /personnel/personnel_list.html
+      ngclick: gotoFlashPage('fault', 'fault/FaultModule.swf', 'childmenuid=alarm_moreRealTimeFaults')
 
     - name: 历史告警
       icon: fa fa-th-large
-      uri: /personnel/personnel_list
-      controller: PersonnelController
-      template: /personnel/personnel_list.html
+      ngclick: gotoFlashPage('fault', 'fault/FaultModule.swf', 'childmenuid=alarm_alarmhistorylist')
 
     - name: 告警速查
       icon: fa fa-th-large
-      uri: /personnel/personnel_list
-      controller: PersonnelController
-      template: /personnel/personnel_list.html
+      ngclick: gotoFlashPage('fault', 'fault/FaultModule.swf', 'childmenuid=alarm_alarmshowing')
 
     - name: 维护记录
       icon: fa fa-th-large
-      uri: /personnel/personnel_list
-      controller: PersonnelController
-      template: /personnel/personnel_list.html
+      ngclick: gotoFlashPage('fault', 'fault/FaultModule.swf', 'childmenuid=alarm_alarmmaintenance')
 
     - name: 告警配置
       icon: fa fa-th-large
-      uri: /personnel/personnel_list
-      controller: PersonnelController
-      template: /personnel/personnel_list.html
+      ngclick: gotoFlashPage('fault', 'fault/FaultModule.swf', 'childmenuid=alarm_config')
 
 - name: 资产管理
   icon: fa fa-university
@@ -321,27 +278,19 @@
   menus:
     - name: 机房概览
       icon: fa fa-th-large
-      uri: /personnel/personnel_list
-      template: /personnel/personnel_list.html
-      controller: PersonnelController
+      ngclick: gotoFlashPage('idc', 'idc/IDCModule.swf', 'childmenuid=idc_general')
 
     - name: 机房监控
       icon: fa fa-th-large
-      uri: /personnel/personnel_list
-      controller: PersonnelController
-      template: /personnel/personnel_list.html
+      ngclick: gotoFlashPage('idc', 'idc/IDCModule.swf', 'childmenuid=idc_monitor')
 
     - name: 机房告警
       icon: fa fa-th-large
-      uri: /personnel/personnel_list
-      controller: PersonnelController
-      template: /personnel/personnel_list.html
+      ngclick: gotoFlashPage('fault', 'fault/FaultModule.swf', 'childmenuid=alarm_conditonRealTimeFaults')
 
     - name: 机房报表
       icon: fa fa-th-large
-      uri: /personnel/personnel_list
-      controller: PersonnelController
-      template: /personnel/personnel_list.html
+      ngclick: gotoFlashPage('perf', 'perf/PerfModule.swf', 'childmenuid=perf_queryIdcTask')
 
 - name: 系统
   icon: fa fa-cog
@@ -350,37 +299,29 @@
   menus:
     - name: 用户管理
       icon: fa fa-th-large
-      uri: /personnel/personnel_list
-      template: /personnel/personnel_list.html
-      controller: PersonnelController
+      ngclick: gotoFlashPage('system', 'system/SystemModule.swf', 'childmenuid=system_usertorole')
 
     - name: 日志管理
       icon: fa fa-th-large
-      uri: /personnel/personnel_list
-      controller: PersonnelController
-      template: /personnel/personnel_list.html
+      ngclick: gotoFlashPage('system', 'system/SystemModule.swf', 'childmenuid=system_log')
 
     - name: 修改密码
       icon: fa fa-th-large
-      uri: /personnel/personnel_list
-      controller: PersonnelController
-      template: /personnel/personnel_list.html
+      ngclick: gotoFlashPage('system', 'system/SystemModule.swf', 'childmenuid=system_changepwd')
 
     - name: 邮箱配置
       icon: fa fa-th-large
-      uri: /personnel/personnel_list
-      controller: PersonnelController
-      template: /personnel/personnel_list.html
+      ngclick: gotoFlashPage('system', 'system/SystemModule.swf', 'childmenuid=system_email')
 
     - name: 短信配置
       icon: fa fa-th-large
-      uri: /personnel/personnel_list
-      controller: PersonnelController
-      template: /personnel/personnel_list.html
+      ngclick: gotoFlashPage('system', 'system/SystemModule.swf', 'childmenuid=topo_flat_view')
 
-    - name: 其他
+    - name: 用户注销
       icon: fa fa-th-large
-      uri: /personnel/personnel_list
-      controller: PersonnelController
-      template: /personnel/personnel_list.html
+      ngclick: gotoFlashPage('system', 'system/SystemModule.swf', 'childmenuid=topo_flat_view')
+#
+#    - name: 其他
+#      icon: fa fa-th-large
+#      ngclick: gotoFlashPage('system', 'system/SystemModule.swf', 'childmenuid=topo_flat_view')
 
