--- a/data/sidebar.yml
+++ b/data/sidebar.yml
@@ -312,10 +312,10 @@
     - name: 邮箱配置
       icon: fa fa-th-large
       ngclick: gotoFlashPage('system', 'system/SystemModule.swf', 'childmenuid=system_email')
-
-    - name: 短信配置
-      icon: fa fa-th-large
-      ngclick: gotoFlashPage('system', 'system/SystemModule.swf', 'childmenuid=topo_flat_view')
+#
+#    - name: 短信配置
+#      icon: fa fa-th-large
+#      ngclick: gotoFlashPage('system', 'system/SystemModule.swf', 'childmenuid=topo_flat_view')
 
     - name: 用户注销
       icon: fa fa-th-large
