嵌入地图雷达 - 首页-地图雷达

--- a/data/sidebar.yml
+++ b/data/sidebar.yml
@@ -23,6 +23,12 @@
       uri: /nothing/motorroom
       template: /nothing.html
 
+    - name: 地图雷达
+      icon: fa fa-stethoscope
+      controller: MapradarController
+      uri: /basic/mapradar
+      template: /mapradar/mapradar.html
+
 #- name: 首页栏目
 #  icon: fa fa-home
 #  prefix: /app
